crates/cairo-lang-parser/src/parser_test_data/diagnostics/pattern
//! > Test modifier followed by path.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn f() {
    let ref abc::def = 5;
    let A { x
    let x = 5;
}

//! > expected_diagnostics
error[E1001]: Missing token '='.
 --> dummy_file.cairo:2:16
    let ref abc::def = 5;
               ^

error[E1002]: Missing tokens. Expected an expression.
 --> dummy_file.cairo:2:16
    let ref abc::def = 5;
               ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:2:16
    let ref abc::def = 5;
               ^

error[E1000]: Skipped tokens. Expected: statement.
 --> dummy_file.cairo:2:16
    let ref abc::def = 5;
               ^^

error[E1001]: Missing token '}'.
 --> dummy_file.cairo:3:14
    let A { x
             ^

error[E1001]: Missing token '='.
 --> dummy_file.cairo:3:14
    let A { x
             ^

error[E1002]: Missing tokens. Expected an expression.
 --> dummy_file.cairo:3:14
    let A { x
             ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:3:14
    let A { x
             ^
